--- a/BookShop/Menu/popular.html
+++ b/BookShop/Menu/popular.html
@@ -105,7 +105,7 @@
 </p>
 
 <p style="text-indent: 25px;"> <b> 
-Начав писать ужасы, вы вошли в наименее уважаемы жанр в литературе. 
+Начав писать ужасы, вы вошли в наименее уважаемый жанр в литературе. 
 </b> </p>
 <p style="text-indent: 25px;">
 Ага. Это один из жанров, которые живут самостоятельно вне литературного сообщества, но что я мог поделать? Меня тянуло к нему. Мне нравится Д.Г. Лауренса. И поэзия Джеймса Дики, Эмиль Золя, Стейнбека... немного Фицжеральда. А Хемингуэй не для всех. Хемингуэй отстой, в основном. Если люди такое любят, ну и ладно. Но если бы я задался целью писать в таком стиле, то мои работы были бы пустыми и безжизненными, и это был бы уже не я. Что я этим хотел сказать - я лучше всего пишу в жанре ужасов. 
