--- a/BookShop/Menu/popular.html
+++ b/BookShop/Menu/popular.html
@@ -85,32 +85,30 @@
       <hr class="d-sm-none">
     </div>
 	<div class="col-sm-8">
-      <h2><b>Стивен Кинг</b></h2>
-      <h5>Как Стивену Кингу удается передавать такую жуткую атмосферу?</h5>
+       <h2 style="font-size:35px;color:#ff0000;" > Интервью Стивена Кинга журналу «Rolling Stone»</h2>
+      <p><i><b>Как Стивену Кингу удается передавать такую жуткую атмосферу?</b></i></p>
+	    <p><i><a href="Questions.html">Разговор Стивена Кинга с интвервьювером</a></i></p> 
       <img src="imag/King2.jpg" alt="S.King" width="600" height="400">
-	  <p> </p>
-	  <h6>
-      <p style="text-indent: 250px;"><b>Полное интервью с великим писателем</b></p> <h6>
-<p style="text-indent: 25px;"> <b>   В основном ваши сюжеты наполнены мистикой и ужасами. Что привело вас именно к этим жанрам? </b> </p>
-
-<p style="text-indent: 25px;">Он уже был создан. Вот и все. Первый фильм, который я посмотрел, это был фильм ужасов. А именно - Бэмби. Когда маленькие оленята попадают в лесной пожар, я был просто в ужасе, хотя мне было одновременно и весело. Я не могу это объяснить. Моя жена и дети пьют кофе, а я нет, я больше люблю чай. Их даже не заставишь даже просто прикоснуться к еде с анчоусами, а вот я их обожаю. Я под завязку набит всякими странностями, которые в итоги и составляют меня. 
-</p>
-
-<p style="text-indent: 25px;"> <b> 
-Вам когда-нибудь бывает стыдно за то, что пугаете народ? 
-</b> </p>
-
+	 <p />
+	  <p style="text-indent: 25px;font-size: 20px; color:#333333;"> <b>
+Маэстро ужаса оглядывается на свои четыре десятка лет работы. 
+</b></p>
 <p style="text-indent: 25px;">
-Нет. Как по мне, пугать людей - это весело. И социально приемлемо, взять к примеру огромную кучу фильмы ужасов. Да к тому же я вырос на таких комиксах как The Crypt of Terror. 
+Рабочий офис Стивена Кинга находится в тупике в конце улицы Города Бангор, штата Мэн, прямо за оружейном магазином, парковкой снегоуборочной машины и, конечно же, старым кладбищем. Снаружи это здание больше напоминает филиал компании Dunder Miffin, что защищает «Короля» и его немногочисленный персонал от нежелательного внимания. «Мы не можем располагаться на центральной улице, так как люди быстро нас найдут,» - сообщил нам один из его сотрудников, - «И они не входят в число тех людей, которых вы были бы рады видеть. Он привлекает действительных странных людей» 
 </p>
-
-<p style="text-indent: 25px;"> <b> 
-Начав писать ужасы, вы вошли в наименее уважаемый жанр в литературе. 
-</b> </p>
 <p style="text-indent: 25px;">
-Ага. Это один из жанров, которые живут самостоятельно вне литературного сообщества, но что я мог поделать? Меня тянуло к нему. Мне нравится Д.Г. Лауренса. И поэзия Джеймса Дики, Эмиль Золя, Стейнбека... немного Фицжеральда. А Хемингуэй не для всех. Хемингуэй отстой, в основном. Если люди такое любят, ну и ладно. Но если бы я задался целью писать в таком стиле, то мои работы были бы пустыми и безжизненными, и это был бы уже не я. Что я этим хотел сказать - я лучше всего пишу в жанре ужасов. 
+Но как только такие посетители появляются, комната превращается в нирвану Стивена Кинга: фанатские рисунки популярных персонажей его книг, фигурки Стивена в стилистике Симпсонов, эти дурацкие большеголовые игрушки клоуна из книги 1986 года «ОНО» и кучи и кучи книг. Сам же маэстро держит старый дом в готическом стиле (с неотъемлемой паутиной и летучими мышками на воротах) в паре миль от офиса, постоянно оккупированный автобусами, набитых туристами, но сам там почти не бывает. Большую часть времени он проживает в двух с половиной часах езды отсюда, в городе Ловелл, с трем взрослыми детьми, женой Табитой сейчас, и в Сарасоте, что во Флориде, зимой. 
 </p>
-	  <p>   </div>
+<p style="text-indent: 25px;">
+Сам Кинг заезжает в офис где-то раз в месяц, но сегодня он остался и завалил нас кучами своих проектов. А еще он подредактировал свою будущую книгу про серийного убийцу «Finders Keepers» (продолжение «Мистера Мерседеса»», что само по себе удивительно и похвально, ибо в этом году и так написал две книги, сценарий для Джоан Аллен и Энтони ЛаПалии «Счастливый брак», а так же продолжил работу над «Братьями призраками из округа Даркленд», музыкальным проектом в соавторстве с Джоном Мелленкампом.) 
+</p>
+<p style="text-indent: 25px;">
+Но сейчас 67-летний писатель сидит сгорбившись в кресле в своем кабинете, поглощая пончик, что осыпает его черную рубашку сахарной пудрой. Он сильно волнуется на счет скорого выхода своей новой книги «Возрождение» - эдакий современный «Франкенштейне», которая повествует о проповеднике, одержимым целительной силой электричества и своими 50-летними тяжелыми отношениями с наркоманом-гитаристом из рок-группы. Эта история просто гарантированно попадет на первое место в списке бестселлеров The New York Times. 
+</p>
+<p style="text-indent: 25px;">
+Еще с 1974 года, когда Керри появилась на полках книжных магазинов, Кинг продал свыше 350 миллионов экземпляров, и заработал сотни миллионов долларов. Сейчас только Джон Гришэм и «Пятьдесят оттенков серого» Э.Л. Джеймс могут потягаться с Маэстро. «Он вне конкуренции», - говорит его давний агент Чак Веррилл, - «Единственный парень, с кем он соперничал, так это Том Клэнси. Оба когда-то печатались в Пингвине, и это ясно дало ему понять, что он является вторым, после Кленси. Ему это не понравилось, но увы, это так." 
+Кинг давал не так уж много столь объемных интервью с тех пор, как чуть не погиб в аварии 15 лет назад, но он все же решил пообсуждать с Rolling Stone свои жизнь и карьеру. 
+	 </div>
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Книжный интернет-магазин Всезнайка. © 2019</p>
 </div>
