--- a/BookShop/Menu/registration.html
+++ b/BookShop/Menu/registration.html
@@ -63,29 +63,36 @@
 <div class="form-group">
 <ul id="reg">
 <li>
+<fieldset id="email">
 	<label for="email">Email</label>
 	<span>*</span>
 	<input type="email" class="form-control" id="email" placeholder="Введите email">
-</li>
+	</fieldset>
+	</li>
 <li>
+<fieldset id="pass">
 	<label for="password">Пароль</label>
 	<span>*</span>
 	<input type="password" class="form-control" id="password" placeholder="Введите пароль">
+	</fieldset>
+	</li>
+<li>
+<fieldset id="surname">
+	<label for="surname">Фамилия</label>
+	<span>*</span>
+	<input type="text" class="form-control" id="surname" </fieldset>
 </li>
 <li>
-	<label for="password">Фамилия</label>
+<fieldset id="name">
+	<label for="name">Имя</label>
 	<span>*</span>
-	<input type="text" class="form-control" id="surname" 
+	<input type="text" class="form-control" id="name" </fieldset>
 </li>
 <li>
-	<label for="password">Имя</label>
+<fieldset id="addr">
+	<label for="adress">Адрес доставки</label>
 	<span>*</span>
-	<input type="text" class="form-control" id="name" 
-</li>
-<li>
-	<label for="password">Адрес доставки</label>
-	<span>*</span>
-	<input type="text" class="form-control" id="adress" 
+	<input type="text" class="form-control" id="adress" </fieldset>
 </li>
 </ul>
 	</div>
