--- a/BookShop/Menu/popular.html
+++ b/BookShop/Menu/popular.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en
 
@@ -50,13 +51,25 @@
         <a class="nav-link" href="Selection.html">Подборки</a>
       </li>  	  
     </ul>
-	
+	<!-- Вход и Регистрация-->
 	<div class="container" style="margin-top:30px">
-	<p id="nav-item" align="right">
-	<a class="nav-link">Вход </a>
+	<div id="block-top-auth" align="right">
+	<form>
+		<fieldset id="inputs">
+		 <input id="username" type="email" name="Email" placeholder="Ваш email адрес" required>  
+		 <input id="password" type="password" name="Password" placeholder="Пароль" required>
+		</fieldset>
+		<fieldset id="actions">
+		 <input type="submit" id="submit" value="Войти">
+		 <label style="color:white"><input type="checkbox" checked="checked" > Запомнить меня?</label>
+		</fieldset>
+	</form>
 	<a href="registration.html">Регистрация</a></p>
 	</div>
+	</div>
   </div>  
+	
+	
 </nav>
 <div class="container" style="margin-top:30px">
   <div class="row">
