--- a/BookShop/Menu/Questions.html
+++ b/BookShop/Menu/Questions.html
@@ -164,6 +164,8 @@
 Да. А чем мне еще заниматься? Могу играть на гитаре, или смотреть телевизор. Но процесс написания доставляет мне большее удовольствие. А еще оно делает счастливыми меня и моих читателей. 
 </p>
 	 </div>
+</div>
+</div>
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Книжный интернет-магазин Всезнайка. © 2019</p>
 </div>
