--- a/BookShop/Menu/Parusa.html
+++ b/BookShop/Menu/Parusa.html
@@ -64,7 +64,8 @@
 		 <label style="color:white"><input type="checkbox" checked="checked" > Запомнить меня?</label>
 		</fieldset>
 	</form>
-	<a href="registration.html">Регистрация</a></p>
+	<a href="registration.html">Регистрация</a></br>
+	<a href="basket.html">Корзина</a>
 	</div>
 	</div>
   </div>  
