--- a/BookShop/Menu/Questions.html
+++ b/BookShop/Menu/Questions.html
@@ -65,6 +65,7 @@
 		</fieldset>
 	</form>
 	<a href="registration.html">Регистрация</a></p>
+	<a href="basket.html">Корзина</a></p>
 	</div>
 	</div>
   </div>  
@@ -164,8 +165,6 @@
 Да. А чем мне еще заниматься? Могу играть на гитаре, или смотреть телевизор. Но процесс написания доставляет мне большее удовольствие. А еще оно делает счастливыми меня и моих читателей. 
 </p>
 	 </div>
-</div>
-</div>
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Книжный интернет-магазин Всезнайка. © 2019</p>
 </div>
