--- a/BookShop/Menu/popular.html
+++ b/BookShop/Menu/popular.html
@@ -65,6 +65,7 @@
 		</fieldset>
 	</form>
 	<a href="registration.html">Регистрация</a></p>
+	<a href="basket.html">Корзина</a></p>
 	</div>
 	</div>
   </div>  
@@ -122,10 +123,9 @@
 Еще с 1974 года, когда Керри появилась на полках книжных магазинов, Кинг продал свыше 350 миллионов экземпляров, и заработал сотни миллионов долларов. Сейчас только Джон Гришэм и «Пятьдесят оттенков серого» Э.Л. Джеймс могут потягаться с Маэстро. «Он вне конкуренции», - говорит его давний агент Чак Веррилл, - «Единственный парень, с кем он соперничал, так это Том Клэнси. Оба когда-то печатались в Пингвине, и это ясно дало ему понять, что он является вторым, после Кленси. Ему это не понравилось, но увы, это так." 
 Кинг давал не так уж много столь объемных интервью с тех пор, как чуть не погиб в аварии 15 лет назад, но он все же решил пообсуждать с Rolling Stone свои жизнь и карьеру. 
 	 </div>
-</div>
-</div>
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Книжный интернет-магазин Всезнайка. © 2019</p>
 </div>
+
 </body>
 </html>
