--- a/BookShop/Menu/registration.html
+++ b/BookShop/Menu/registration.html
@@ -50,8 +50,12 @@
         <a class="nav-link" href="Selection.html">Подборки</a>
       </li>  	  
     </ul>
-	
   </div>  
+  <div class="container" style="margin-top:30px">
+	<div id="block-top-auth" align="right">
+	<a href="basket.html">Корзина</a></p>
+	</div>
+	</div>
 </nav>
 
 <!-- Регистрация-->
