--- a/BookShop/Menu/BookShop.html
+++ b/BookShop/Menu/BookShop.html
@@ -65,6 +65,7 @@
 		</fieldset>
 	</form>
 	<a href="registration.html">Регистрация</a></p>
+	<a href="basket.html">Корзина</a>
 	</div>
 	</div>
   </div>  
