--- a/BookShop/Menu/Genres.html
+++ b/BookShop/Menu/Genres.html
@@ -110,10 +110,17 @@
         <img src="imag/Map.png" alt="Map" width="350" height="350">
       <p>Наш офис находится по адресу: улица Профессора Попова, 5. </p>
     </div>
-  </div>
-</div>
- <div class="col-sm-8">
+	 <div class="col-sm-8">
  <h2>Жанры</h2>
+<p> У нас в интернет-магазине есть детская литература!</p>
+	<p> Детская литература — это литература, специально предназначенная для детей до 15-16 лет и осуществляющая языком художественных образов задачи воспитания и образования детей.
+	</p>
+	<p> Помимо этого существует понятие «детское чтение», в сферу которого могут входить произведения, изначально предназначенные авторами для взрослых, такие как знаменитые произведения Александра Грина, Льва Николаевича Толстого, Антуана де Сент-Экзюпери, а также Даниэля Дефо, причём для детей адаптируют и упрощённо пересказывают сложную литературу, подобную последним упомянутым примерам.
+	</p>
+	<p> Материальным воплощением литературных произведений для детей являются детские книги.</p>
+
+ </div>
+ </div>
  </div>
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Книжный интернет-магазин Всезнайка. © 2019</p>
