--- a/BookShop/Menu/Parusa.html
+++ b/BookShop/Menu/Parusa.html
@@ -104,7 +104,11 @@
       <p>Автор(ы): Александр Грин</p>
      <p> Жанр(ы):  Детсткая литература, сказка, неоромантизм
       </p>
-									      <p style="text-size: 15px;"> Цена: 209 рублей </p>
+	 <p style="font-size: 25px;"><b> Цена: 209 рублей </b></font></p>
+	  
+  <form>
+   <p><input type="button" value="Добавить в корзину"></p>
+  </form>
       <p><b> Подробное описание:</b></p>
 <p style="text-indent: 25px;">
 Александр Грин создал в своих произведениях свой особенный мир. В этом мире веет ветер дальних странствий, его населяют добрые, смелые, веселые люди. А в залитых солнцем гаванях с романтическими названиями — Лисс, Зурбаган, Гель-Гью — прекрасные девушки поджидают своих женихов. В этот мир — чуть приподнятый над нашим, одновременно фантастический и реальный, мы и приглашаем читателей.
