--- a/BookShop/Menu/Prince.html
+++ b/BookShop/Menu/Prince.html
@@ -102,6 +102,12 @@
       <p>Автор(ы): Антуан де Сент-Экзюпери</p>
      <p> Жанр(ы):  Детская литература, классика, сказка
       </p>
+	   <p style="font-size: 25px;"><b> Цена: 314 рублей </b></font></p>
+	  
+  <form>
+   <p><input type="button" value="Добавить в корзину"></p>
+  </form>
+   
       <p><b> Подробное описание:</b></p>
 <p style="text-indent: 25px;">
 В одном из писем к матери Сент-Экзюпери признался: “Мне ненавистны люди, пишущие ради забавы, ищущие эффектов. Надо иметь что сказать”. Ему, романтику неба, не чуравшемуся земных радостей, любившему, по свидетельству друзей, “писать, говорить, петь, играть, докапываться до сути вещей, есть, обращать на себя внимание, ухаживать за женщинами”, человеку проницательного ума со своими достоинствами и недостатками, но всегда стоявшему на защите общечеловеческих ценностей, было “что сказать”. И он это сделал: написал сказку “Маленький принц”, о самом важном в этой жизни, жизни на планете Земля, все чаще такой неласковой, но любимой и единственной.
