--- a/BookShop/Menu/Questions.html
+++ b/BookShop/Menu/Questions.html
@@ -47,10 +47,10 @@
       <li class="nav-item">
         <a class="nav-link" href="Genres.html">Жанры</a>
       </li>
-      <li class="nav-item">
+     <!-- <li class="nav-item">
         <a class="nav-link" href="Selection.html">Подборки</a>
       </li>  	  
-    </ul>
+    </ul> -->
 	<!-- Вход и Регистрация-->
 	<div class="container" style="margin-top:30px">
 	<div id="block-top-auth" align="right">
@@ -164,6 +164,8 @@
 <p style="text-indent: 25px;">
 Да. А чем мне еще заниматься? Могу играть на гитаре, или смотреть телевизор. Но процесс написания доставляет мне большее удовольствие. А еще оно делает счастливыми меня и моих читателей. 
 </p>
+	 </div>
+	 </div>
 	 </div>
 <div class="jumbotron text-center" style="margin-bottom:0">
   <p>Книжный интернет-магазин Всезнайка. © 2019</p>
