--- a/BookShop/Menu/Robinzon.html
+++ b/BookShop/Menu/Robinzon.html
@@ -103,6 +103,12 @@
       <p>Автор(ы): Даниель Дефо</p>
      <p> Жанр(ы): Детская литература, классика, приключения
       </p>
+	   <p style="font-size: 25px;"><b> Цена: 289 рублей </b></font></p>
+	  
+  <form>
+   <p><input type="button" value="Добавить в корзину"></p>
+  </form>
+   
       <p><b> Подробное описание:</b></p>
 <p style="text-indent: 25px;">	 «Робинзо́н Кру́зо» (англ. Robinson Crusoe) — роман английского писателя Даниэля Дефо (1660—1731), впервые опубликованный в апреле 1719 года, повествующий о нравственном возрождении человека в общении с природой и обессмертивший имя автора. Написан как автобиография морского путешественника и плантатора Робинзона Крузо, желавшего ещё более разбогатеть скорым и нелегальным путём, но в результате кораблекрушения попавшего на необитаемый остров и проведшего там 28 лет. Сам Дефо называл свой роман аллегорией.
 Материалом для романа Дефо послужило описание пребывания шотландского боцмана Селькирка на необитаемом острове в 1704—1709 годах. Дефо избрал для своего Робинзона условия и изоляцию сходные с теми, что достались Селькирку; но если последний одичал на острове, то Робинзон нравственно возродился.
