--- a/BookShop/Menu/Tolstoj.html
+++ b/BookShop/Menu/Tolstoj.html
@@ -103,6 +103,12 @@
       <p>Автор(ы):  Лев Николаевич Толстой</p>
      <p> Жанр(ы): Детсткая литература, автобиография
       </p>
+	   <p style="font-size: 25px;"><b> Цена: 343 рублей </b></font></p>
+	  
+  <form>
+   <p><input type="button" value="Добавить в корзину"></p>
+  </form>
+   
       <p><b> Подробное описание:</b></p>
 <p style="text-indent: 25px;">	 «Детство» — первая повесть в псевдо-автобиографической трилогии Льва Толстого, впервые напечатана в 1852 году в журнале Современник, № 9. Эта книга описывает большие психологические переживания, которые испытывают многие мальчики в детстве: первая влюблённость, чувство несправедливости, обида, стеснение.</p> 
 <p style="text-indent: 25px;">	«Отрочество» — вторая повесть в псевдо-автобиографической трилогии Льва Толстого, впервые напечатана в 1854 году в журнале Современник. Эта книга описывает события, происходящие в жизни подростка во время отрочества: первое предательство, изменение моральных ценностей и т. п. </p>
