--- a/BookShop/Menu/BookShop.html
+++ b/BookShop/Menu/BookShop.html
@@ -64,7 +64,8 @@
 		 <label style="color:white"><input type="checkbox" checked="checked" > Запомнить меня?</label>
 		</fieldset>
 	</form>
-	<a href="registration.html">Регистрация</a></p>
+	<a href="#admin">Вход для администратора</a></br>
+	<a href="registration.html">Регистрация</a></br>
 	<a href="basket.html">Корзина</a>
 	</div>
 	</div>
@@ -119,6 +120,20 @@
 </div>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
+<div class="container" style="margin-top:30px">
+	<div id="block-top-auth" align="right">
+	<form>
+		<fieldset id="admin">
+		 <input id="username" type="email" name="Email" placeholder="Ваш email адрес" required>  
+		 <input id="password" type="password" name="Password" placeholder="Пароль" required>
+		</fieldset>
+		<fieldset id="actions">
+		 <input type="submit" id="submit" value="Войти">
+		 <a href="admin.html">Перейти к странице администратора</a>
+		</fieldset>
+	</form>
+	</div>
+	</div>
   <p>Книжный интернет-магазин Всезнайка. © 2019</p>
 </div>
 
